--- a/vercel.json
+++ b/vercel.json
@@ -9,16 +9,12 @@
         "maxLambdaSize": "15mb",
         "runtime": "python3.12"
       }
-    },
-    {
-      "src": "static/**",
-      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/static/(.*)",
-      "dest": "/static/$1"
+      "dest": "api/index.py"
     },
     {
       "src": "/(.*)",
